@@ -6,23 +6,27 @@ $path = "../../../../../libraries/";
 /** The configuration file.*/
 include_once $path."configuration.php";
 if ($_POST['templateName']) {
- $dir = '../../../../content/editor_templates/'.$_SESSION['s_login'];
- if (!is_dir($dir) && !mkdir($dir, 0755)) {
-  throw new Exception(_COULDNOTCREATEDIRECTORY);
- }
+ if (eF_checkParameter($_POST['templateName'], 'string')) {
+  $dir = '../../../../content/editor_templates/'.$_SESSION['s_login'];
+  if (!is_dir($dir) && !mkdir($dir, 0755)) {
+   throw new Exception(_COULDNOTCREATEDIRECTORY);
+  }
 
- $filename = $dir.'/'.$_POST['templateName'].'.html';
- $templateContent = $_POST['templateContent'];
- if(file_exists($filename) === false) {
-  $ok = file_put_contents($filename, $templateContent);
-  chmod($filename, 0644);
-  if ($ok !== false) {
-   $message = '<div class="messageDivGreen">{#save_template_dlg.filesaved}</div>';
+  $filename = $dir.'/'.$_POST['templateName'].'.html';
+  $templateContent = $_POST['templateContent'];
+  if(file_exists($filename) === false) {
+   $ok = file_put_contents($filename, $templateContent);
+   chmod($filename, 0644);
+   if ($ok !== false) {
+    $message = '<div class="messageDivGreen">{#save_template_dlg.filesaved}</div>';
+   } else {
+    $message = '<div class="messageDivRed">{#save_template_dlg.problem}</div>';
+   }
   } else {
-   $message = '<div class="messageDivRed">{#save_template_dlg.problem}</div>';
+   $message = '<div class="messageDivRed">{#save_template_dlg.fileexists}</div>';
   }
  } else {
-  $message = '<div class="messageDivRed">{#save_template_dlg.fileexists}</div>';
+  $message = '<div class="messageDivRed">{#save_template_dlg.problem}</div>';
  }
 }
 
